@@ -6,10 +6,8 @@ import com.github.bestheroz.standard.common.exception.BusinessException;
 import com.github.bestheroz.standard.common.exception.ExceptionCode;
 import com.github.bestheroz.standard.common.response.ApiResult;
 import com.github.bestheroz.standard.common.response.Result;
-import com.github.bestheroz.standard.common.util.MapperUtils;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import javax.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -45,14 +43,13 @@ public class CodeController {
             .getItemsByMapWithOrder(Map.of("type", type), List.of("displayOrder"))
             .stream()
             .map(CodeDTO::new)
-            .collect(Collectors.toList()));
+            .toList());
   }
 
   @PostMapping
   public ResponseEntity<ApiResult<CodeDTO>> post(@RequestBody @Valid final CodeDTO payload) {
     final Code code = payload.toCode();
     this.codeRepository.insert(code);
-    log.debug("code: {}", MapperUtils.toString(code));
     return Result.created(
         new CodeDTO(
             this.codeRepository
