@@ -26,16 +26,16 @@ public class RoleService {
   @Transactional(readOnly = true)
   public List<RoleChildrenDTO> getItems() {
     return this.roleRepository
-        .getItemsByMapWithOrder(Map.of("parentId", "@NULL"), List.of("displayOrder"))
+        .getItemsByMapWithOrder(Map.of("parentId:null", "@NULL"), List.of("displayOrder"))
         .stream()
         .map(r -> new RoleChildrenDTO(r, this.getChildren(r.getId())))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public List<RoleChildrenDTO> getChildren(final Long parentId) {
     return this.roleRepository.getItemsByMap(Map.of("parentId", parentId)).stream()
         .map(r -> new RoleChildrenDTO(r, this.getChildren(r.getId())))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public RoleChildrenDTO getItem(final Long id) {
@@ -57,7 +57,7 @@ public class RoleService {
                       .map(RoleChildrenDTO::getId)
                       .filter(Objects::nonNull)
                       .collect(Collectors.toSet()),
-                  "parentId",
+                  "parentId:null",
                   "@NULL"))
           .forEach(
               r -> {
@@ -127,8 +127,6 @@ public class RoleService {
     if (available != null) {
       map.put("available", available);
     }
-    return this.roleRepository.getItemsByMap(map).stream()
-        .map(RoleSimpleDTO::new)
-        .collect(Collectors.toList());
+    return this.roleRepository.getItemsByMap(map).stream().map(RoleSimpleDTO::new).toList();
   }
 }
